Ultima version terminada.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
         <span class="item"><a href="#titulo3">Rios</a></span>
     </nav>
     <div class="contenedor" role="main">
-    <div class="bloque2">
-    </div>
+      <div class="bloque2">
+        <div id="description">
+          <p>Te llevamos a pasar tus mejores momentos..</p>
+          <p>Escoje un lugar, la cantidad de tiempo y te llevamos</p>
+        </div>
+      </div>
     </div>
     <div class="contenedor2">
       <div class="bloqueimd1">
